# sbi-compression

./: .gitignore  README.md  jax_tracked_container_guide.ipynb  main.py  pyproject.toml  pyproject_old.toml  sbi_comp_sandbox.def
examples/: CCA_sbi_lens.ipynb  MSE_sbi_lens.ipynb  NLE_sbi_lens.ipynb  VMIM_EMtrain_sbi_lens.ipynb  VMIM_sbi_lens.ipynb  eqx_MNIST_example.ipynb  eqx_build_nn.ipynb  nnx_NSF_LinearVMIM.ipynb  nnx_RQSplineFlow.ipynb  nnx_build_nn.ipynb  s2MSE_sbi_lens.ipynb
examples/checkpoints/: autoencoder_flow_v1.pkl
examples/compressed_data/: MSE_sbi_lens.pkl  VMIM_3transforms_8bins_min-4.0_max4.0.pkl  VMIM_4transforms_10bins_min-4.0_max4.0.pkl  VMIM_4transforms_6bins_min-4.0_max4.0.pkl  VMIM_4transforms_8bins_min-3.0_max3.0.pkl  VMIM_4transforms_8bins_min-4.0_max4.0.pkl  VMIM_4transforms_8bins_min-5.0_max5.0.pkl  VMIM_5transforms_10bins_min-4.0_max4.0.pkl  VMIM_5transforms_8bins_min-4.0_max4.0.pkl  VMIM_EMtrain_4transforms_8bins_min-3.0_max3.0.pkl
examples/posterior_samples/: NLE_CCA_posterior_1000samples.pkl  NLE_MSE_posterior_1000samples.pkl  NLE_VMIM_posterior_1000samples.pkl
examples/sbi-logs/NLE_A/2026-06-15T15_02_15.805146/: events.out.tfevents.1781532135.Mac.communityfibre.co.uk.31466.0
examples/sbi-logs/NLE_A/2026-06-15T15_24_43.273532/: events.out.tfevents.1781533483.Mac.communityfibre.co.uk.32456.0
examples/sbi-logs/NLE_A/2026-06-15T22_30_51.086810/: events.out.tfevents.1781559051.Mac.communityfibre.co.uk.32456.1
examples/sbi-logs/NLE_A/2026-06-15T22_37_18.802793/: events.out.tfevents.1781559438.Mac.communityfibre.co.uk.32456.2
examples/sbi-logs/NLE_A/2026-06-15T22_39_38.984040/: events.out.tfevents.1781559578.Mac.communityfibre.co.uk.32456.3
examples/sbi-logs/NLE_A/2026-06-16T12_25_41.331663/: events.out.tfevents.1781609141.Mac.communityfibre.co.uk.44660.0
examples/sbi-logs/NLE_A/2026-06-16T12_29_27.732269/: events.out.tfevents.1781609367.Mac.communityfibre.co.uk.44660.1
examples/sbi-logs/NLE_A/2026-06-16T12_57_29.887720/: events.out.tfevents.1781611049.Mac.communityfibre.co.uk.44660.2
examples/sbi-logs/NLE_A/2026-06-16T14_52_05.971855/: events.out.tfevents.1781617925.Mac.communityfibre.co.uk.44660.3
examples/trained_models/: NLE_VMIM_sbi_lens.pkl
src/sbi_compression/: __init__.py  api.py  cli.py
src/sbi_compression/methods/: __init__.py  data.py  utils.py
(+15 files in other folders)
