[project]
name = "sbi_compression"
authors = [
    {name = "Brian Chiang", email = "brianchiangycc@gmail.com"}
]
version = "0.1.0"
description = "Euclidean and spherical compression for SBI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.8",
    "equinox>=0.13.8",
    "flax>=0.12.7",
    "ipykernel>=7.2.0",
    "jax>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
ml = [
    "scipy>=1.16",
    "PyYAML",
]
dev = [
    "pytest>=8.0",
]
docs = [
    "sphinx",
]

[project.scripts]
sbi_compression = "sbi_compression.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sbi_compression*"]
exclude = ["tests*", "docs*"]




